--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
 
     <script src="three-scene.js"></script>
+    <script src="debugging.js"></script>
     <script src="scripts.js"></script>
 </body>
 
