--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>Year</h2>
                 <ul>
                     <li><a href="#" data-filter="year" data-value="2024">2024</a></li>
-                    <li><a href="#" data-filter="year" data-value="2025" class="active">2025</a></li>
+                    <li><a href="#" data-filter="year" data-value="2025">2025</a></li>
                 </ul>
             </div>
 
@@ -35,7 +35,7 @@
                     <h2>Theme</h2>
                     <ul>
                         <li><a href="#" data-filter="theme" data-value="something">Something</a></li>
-                        <li><a href="#" data-filter="theme" data-value="another-thing" class="active">Another thing</a>
+                        <li><a href="#" data-filter="theme" data-value="another-thing">Another thing</a>
                         </li>
                         <li><a href="#" data-filter="theme" data-value="some-other-topic">Some other topic</a></li>
                     </ul>
@@ -44,7 +44,7 @@
                 <div class="filter-section">
                     <h2>Type</h2>
                     <ul>
-                        <li><a href="#" data-filter="type" data-value="Interview" class="active">Interview</a></li>
+                        <li><a href="#" data-filter="type" data-value="Interview">Interview</a></li>
                         <li><a href="#" data-filter="type" data-value="Essay">Essay</a></li>
                         <li><a href="#" data-filter="type" data-value="Poem">Poem</a></li>
                     </ul>
