--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="./debugging.css">
     <!-- three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- css3d renderer for html elements in 3d space -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/renderers/CSS3DRenderer.js"></script>
 </head>
 
 <body>
     <div id="background-canvas"></div>
+    <div id="css-renderer-container"></div>
 
     <div class="container">
         <header>
@@ -67,7 +70,9 @@
 
     <script src="./three-scene.js"></script>
     <script src="./debugging.js"></script>
-    <script src="./search.js"></script>
+    <script src="./text-rendering.js"></script>
+    <script src="./css3d-integration.js"></script>
+    <script src="./article-background.js"></script>
     <script src="./scripts.js"></script>
 </body>
 
